# django-watch

./: .gitignore  README.md  pyproject.toml  setup.py
django_watch/: middleware.py
tests/: settings.py  test_middleware.py  urls.py
