[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-watch"
version = "0.6.0"
description = "Lightweight Django middleware for real-time request logging during development."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Sobolev Andrey", email = "email.asobolev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=5.0",
]

[project.urls]
Homepage = "https://github.com/Sobolev5/django-watch"
Repository = "https://github.com/Sobolev5/django-watch"
Issues = "https://github.com/Sobolev5/django-watch/issues"

[tool.setuptools.packages.find]
include = ["django_watch*"]
